🎨 fix card overflow
*

--- a/front/src/routes/profile_types/public/UserPublicProfile.css
+++ b/front/src/routes/profile_types/public/UserPublicProfile.css
@@ -86,8 +86,9 @@
 
 .main-card {
   max-width: 50%;
-  max-height: 400px;
-  overflow: auto;
+  max-height: 450px;
+  overflow:hidden;
+
   background: #31353c;
   box-shadow: inset 10px 10px 10px rgba(0, 0, 0, 0.25),
     inset -10px -10px 10px #30343a;
